app/assets/stylesheets/users.css
/* FOR NEW/EDIT USER FORM STYLING: see application.css */
/* Those classes are shared with SESSIONS#LOGIN form */

/* USER SHOW PAGE */
/* For styling the EDIT/DELETE buttons, see application.css (.cu_profile_links) */
/* That class is also used to style the EDIT/DELETE buttons on char show pg. */

#user_showpg_wrapper {
  box-sizing: border-box;
  height: 100%; width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #000;
}

#user_showpg_profile_bg {
  --height: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
  height: 100%; width: calc((var(--height) / 10) * 3.5);
  border-top-right-radius: 100%;
  border-bottom-right-radius: 100%;
  background-color: #FFF;
}

.user_showpg_profile_container {
  box-sizing: border-box;
  width: 100%;
  padding-left: 50px; margin-bottom: 100px;
}

.user_showpg_welcome_block {
  height: 100px;
  position: relative;
  top: 0px; left: 0px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.user_showpg_profile_pic img {
  width: 102px;
  height: 102px;
  border-radius: 52px;
  float: left;
  border: 2px solid #000;
  box-shadow: 5px 5px 15px #000;
}

.user_showpg_greeting {
  padding-left: 20px;
  float: left;
  font-family: "Roboto Condensed";
  font-size: 30px;
}

#user_showpg_char_section {
  width: 400px; 
  position: relative;
  top: 0px; left: 0px;
  padding-left: 20px;
}

.user_showpg_section_title {
  font-family: "Cantarell";
  font-size: 20px;
  text-transform: uppercase;
  margin: 20px 0px 0px;
}

ul.user_showpg_chars_list {
  list-style: none;
  padding-left: 5px;
  margin-top: 10px;
  margin-left: 5px;
  font-family: "Roboto Condensed";
  border-left: 5px solid #000;
}

ul.user_showpg_chars_list a, ul.user_showpg_chars_list a:visited, ul.user_showpg_chars_list a:active {
  color: #ff0000;
  text-decoration: none;
}

ul.user_showpg_chars_list a:hover {
  text-decoration: line-through;
}


/* PROFILE RIGHT PANEL */

.user_showpg_right_container {
  width: 60%;
  color: #000;
  align-self: start;
}

.user_bip_container, .user_find_opponents_container {
  box-sizing: border-box;
  width: calc(100% - 160px);
  padding: 50px 20px;
  background-color: #fff;
}

.user_bip_container { margin-top: 30px; }
.user_find_opponents_container { margin: 100px auto 0px }

.user_bip_title {
  font-family: 'Cantarell';
  font-size: 20px;
  font-weight: bold;
  text-transform: uppercase;
  letter-spacing: -1px;
}

.bip_links {
  font-family: 'Roboto Condensed';
  font-size: 20px;
  color: #f00;
  border-left: 5px solid #000;
  padding-left: 5px;
  margin-left: 5px;
}

a.bip_link, a.bip_link:active, a.bip_link:visited {
  color: #f00;
  text-decoration: none;
  display: block;
}

a.bip_link:hover {
  text-decoration: underline;
}

#find_opponents_wrapper {
  display: flex;
  grid-auto-flow: column;
  justify-content: space-around;
  font-family: "Roboto Condensed";
  font-size: 15px;
}

ul.opponent_list {
  list-style: none;
  padding-left: 0px;
}

ul.opponent_list li a, ul.opponent_list li a:active, ul.opponent_list li a:visited {
  color: #f00;
  text-decoration: none;
}

ul.opponent_list a:hover {
  text-decoration: line-through;
}

ul.opponent_list li a::before {
  color: #000;
  content: "⯈ "
}

.opponent_column_title {
  font-family: "Cantarell";
  font-size: 20px;
  text-transform: uppercase;
  font-weight: bold;
}


/* USER INDEX */

.all_users {
  width: calc(100% - 100px); height: calc(100% - 100px);
  display: block;
  position: relative;
}

.all_users_title {
  font-family: 'Cantarell';
  font-size: 40px;
  font-weight: bold;
}

.all_users_list {
  font-family: 'Roboto Condensed';
  font-size: 20px;
}

.all_users_list a, .all_users_list a:active, .all_users_list a:visited {
  color: #f00;
}

.all_users_list a:hover {
  text-decoration: line-through;
}

